# l2gx

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  LICENSE  README.md  RUST_SETUP.md  debug_metis.py  noxfile.py  pyproject.toml  rename_package.py  rename_simple.py  test_mag240m_enhanced.py
.github/workflows/: tests.yml
docs/: patched_embeddings_guide.md  requirements.txt
docs/source/: conf.py  embedding_guide.rst  index.rst  intro.rst
docs/source/reference/: l2gv2.datasets.rst  l2gv2.embedding.dgi.layers.rst  l2gv2.embedding.dgi.models.rst  l2gv2.embedding.dgi.rst  l2gv2.embedding.dgi.utils.rst  l2gv2.embedding.gae.layers.rst  l2gv2.embedding.gae.models.rst  l2gv2.embedding.gae.rst  l2gv2.embedding.gae.utils.rst  l2gv2.embedding.rst  l2gv2.network.rst  l2gv2.patch.rst  l2gv2.rst  modules.rst
examples/: DGraph_model.ipynb  README.md  Test_new_alignment.ipynb  clustering.ipynb  datasets_demo.py  demo.ipynb  dgraph.ipynb  embedding_demo.py  embedding_examples.py  example.py  mag240m_enhanced_example.py  orbitaal_demo.py  orthogonal_regularization_example.py  patch_demo.py  patch_generation_demo.py  quick_embedding_demo.py  simple_embedding_demo.py  synthetic.ipynb  test_geo2_aligner.py  test_geo2_centering.py  test_geo2_orthogonal.py  test_geo2_performance.py  translation_fix_example.py  troubleshoot_arpack.py  visualize_embedding_flow.py  voronoi_regularization_test.py
l2gx/: hierarchical_embedder.py  utils.py
l2gx/align/: __init__.py  alignment.py  errors.py  nla.py  registry.py  utils.py
l2gx/align/geo/: __init__.py  geoalign.py  model.py  models.py
l2gx/align/geo2/: __init__.py  geoalign2.py  model.py
l2gx/align/l2g/: local2global.py
l2gx/datasets/: __init__.py  as733.py  base.py  citeseer.py  cora.py  dgraph.py  elliptic.py  mag240m.py  orbitaal.py  pubmed.py  registry.py  utils.py
l2gx/embedding/: __init__.py  base.py  patched_embedding.py  registry.py  train.py  utils.py
l2gx/embedding/methods/: __init__.py  dgi_embedding.py  gae_embedding.py  gat_embedding.py  gin_embedding.py  graphsage_embedding.py  hierarchical_embedding.py  patched_embedding.py  svd_embedding.py
l2gx/graphs/: __init__.py  graph.py  npgraph.py  tgraph.py  utils.py
l2gx/patch/: __init__.py  clustering.py  fennel_no_tqdm.py  fennel_utils.py  generate.py  lazy.py  patches.py  sparsify.py  streaming.py  utils.py
l2gx/patch/clustering/: __init__.py  fennel.py  fennel_rust.py  hierarchical.py  louvain.py  metis.py  rust_fennel.py  spread.py  utils.py
notebooks/: demo.ipynb  example.py  scratch.ipynb
run/: README.md  benchmark_clustering.py  config.yaml  config_manager.py  config_simple.yaml  cora_experiments.py  embedding_experiment.py  hierarchical_embedding_demo.py  node_classification.py  plot_embeddings.py  pubmed_classification_experiment.py  pubmed_final_experiment.py  pubmed_final_summary.py  pubmed_patched_visualization.py  test_graph_utils.py
run/configs/: baseline_only.yaml  cora_128.yaml  cora_example.yaml  cora_patched.yaml  cora_whole.yaml  dgi_experiment.yaml  dgi_patched.yaml  pubmed_128.yaml  pubmed_example.yaml  pubmed_patched.yaml
rust_clustering/: Cargo.toml  README.md  build.sh  pyproject.toml
rust_clustering/src/: fennel.rs  lib.rs
scripts/: README_UNIFIED_FRAMEWORK.md  benchmark_clustering.py  plot_test_graph.py  plots.py
scripts/alignment/: README.md  data_config.yaml  data_generation.py  plot_synthetic_data.py  synthetic_data_experiment.py
scripts/alignment/results/: noise_robustness_results.csv
scripts/bitcoin/: README.md  btc.py  btc_reduced_classification_config.yaml  classification_experiment.py  classification_experiment_balanced.py  diagnose_embeddings.py  run_experiment.sh  temporal_enhanced_gin.py  test_btc_classification.py
scripts/bitcoin/btc_balanced_results/: experiment_summary.txt
scripts/bitcoin/unified_btc_reduced_results/: raw_results.csv
scripts/classification/: BTC_REDUCED_CLASSIFICATION.md  README.md  btc_reduced_balanced_config.yaml  btc_reduced_simple_config.yaml  btc_reduced_unified_config.yaml  classification_experiment.py  create_btc_plots.py  create_plots.py  test_both_hierarchical.yaml  test_btc_tgraph_fixed.py  test_classification_quick.py  test_hierarchical_config.yaml  test_sampling_strategies.py  unified_cora_config.yaml  unified_embedding.py  visualize_embeddings.py
scripts/classification/backup/: README_configurable_experiments.md  README_dimension_sweep.md  add_hierarchical_4patch.py  classification_config.yaml  classification_config_rf.yaml  classification_config_svm.yaml  cora_config.yaml  create_accuracy_plots.py  dimension_sweep_experiment.py  minimal_test.py  pubmed_config.yaml  pubmed_simple_config.yaml  quick_dimension_test.py  run_classification.py  test_config.yaml
scripts/classification/btc_balanced_results/: raw_results.csv  summary_results.csv
scripts/classification/btc_simple_test_results/: raw_results.csv  summary_results.csv
scripts/classification/cora_results/: experiment_report.txt  raw_results.csv  summary_results.csv
scripts/classification/pubmed_results/: experiment_report.txt  raw_results.csv  summary_results.csv
scripts/classification/unified_btc_reduced_results/: experiment_report.txt  summary_results.csv
scripts/embedding/: CONFIG_GUIDE.md  README.md  create_pdf.py  run_embedding_config.py  test_unified_configs.py  unified_embedding_example.py
scripts/embedding/config/: unified_hierarchical_config.yaml  unified_patched_geo_config.yaml  unified_patched_l2g_config.yaml
scripts/mag240m/: README.md  streaming_embedding_example.py  test_streaming_patches.py
scripts/patches/: README.md  patch_size_analysis.py
scripts/patches/results/: patch_size_analysis.csv  patch_size_summary.csv
scripts/random_graph/: README.md  __init__.py  agm.py  demo_all_models.py  general_overlapping_communities.py  osbm.py  patch_integration.py  petti_vempala_roc.py
tests/: test_local2global.py
tests/datasets/invalid/: invalid_nodes.parquet
tests/datasets/social/: social_edges.parquet
(+21 files in other folders)
