[package]
name = "l2g_clustering"
version = "0.1.0"
edition = "2021"

[lib]
name = "l2g_clustering"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
rayon = "1.8"
ndarray = "0.15"

[dependencies.pyo3]
version = "0.20"
features = ["extension-module", "abi3-py38"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"